# hfoil

./: .travis.yml  README.md  potential_flow_forces.nb
hfoil/: LICENSE  Main.hs  hfoil.cabal
hfoil/HFoil/: Drawing.hs  Flow.hs  Foil.hs  Naca4.hs  Panels.hs  Repl.hs
hfoil/Numeric/: HFoil.hs
hfoil/Numeric/HFoil/: Drawing.hs  Flow.hs  Foil.hs  Naca4.hs  Repl.hs
hfoil/apps/: Main.hs
hfoil/src/: HFoil.hs
hfoil/src/HFoil/: Drawing.hs  Flow.hs  Foil.hs  Naca4.hs  Repl.hs
hhs_panel/: Main.hs  hfoil.cabal  naca4.hs
hhs_panel/HFoil/: Drawing.hs  Flow.hs  Naca4.hs  Panels.hs
hs_panel/: airfoil_solver.py  flow.py  naca.py
hw1/: airfoil_solver.py  flow.py  potential_flow_forces.nb  vortex_force.nb
pyfoil/: airfoil_solver.py  flow.py  naca.py
thin_airfoil/: supersonic_thin_airfoil.nb  thin_airfoil.nb
