Name:                hfoil
Version:             0.1
Synopsis:            Hess-Smith panel code for airfoil analysis
-- Description:         
License:             BSD3
License-file:        LICENSE
Author:              Greg Horn
Maintainer:          gregmainland@gmail.com
Copyright:           Greg Horn, 2012
Category:            Numeric
Build-type:          Simple
Cabal-version:       >=1.2


Flag fun
     Description: Build something executable
     Default: True


Library
  Exposed-modules:     HFoil.Naca4
                       HFoil.Panels
                       HFoil.Drawing
                       HFoil.Flow
--  Other-modules:       

  Build-depends:       gloss >= 1.6,
                       base == 4.*,
                       MissingH >= 1.1,
                       hmatrix >= 0.12

  Ghc-Options:         -Wall
  Ghc-Prof-Options:    -prof -auto-all



Executable hfoil
  if flag(fun)
     Buildable: True
  else
     Buildable: False

  Main-Is:             Main.hs
  Ghc-Options:         -O2 -threaded -Wall
  GHC-Prof-Options:    -auto-all -caf-all -rtsopts
